@@ -18,6 +18,8 @@ BUGFIX PATCHES SINCE THE 3.1 RELEASE
 
   - Bugfix for integer overflow in PCRE repeat counts.
 
+  - Removed stale code in add_player_name.
+
 3.1 Patchlevel 2
 
   - Startmush now accept start/stop/restart/reboot switches. You can
